# home_server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  http_client.c  http_server.c  index.html  main  main.c  makefile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tcp_client.c  tcp_server.c
.github/workflows/: build-publish.yml  deploy.yml  prod.yml  release-flow.yml  release.yml  reusable-ci.yml  test-flow.yml  test.yml
app/: Cargo.toml
app/src/: api.rs  lib.rs
app/src/components/: button.rs  default_button.rs  footer.rs  input.rs  mod.rs  nav_bar.rs
app/src/pages/: counter.rs  home.rs  mod.rs  todo.rs  todos.rs
beer_service/: Cargo.toml  Dockerfile
beer_service/src/: app_config.rs  main.rs
front/: Cargo.toml
scripts/: watch.sh
server/: Cargo.toml
server/migrations/: 20230513165959_create_todo_and_user_tables.down.sql  20230513165959_create_todo_and_user_tables.up.sql
server/src/: app.rs  app_state.rs  config.rs  error.rs  main.rs
server/src/adapters/api/: error.rs  mod.rs  routes_hello.rs
server/src/adapters/api/routes_todo/: create.rs  get.rs  list.rs  mod.rs  update.rs
server/src/application/use_cases/: error.rs
server/src/application/use_cases/todo/: create.rs  get.rs  list.rs  mod.rs  update.rs
server/src/domain/entities/: todo.rs  user.rs
server/src/domain/repositories/: todo_repository.rs  user_repository.rs
server/src/infrastructure/: mod.rs
server/src/infrastructure/repositories/: todo_repository.rs  user_repository.rs
src/: app.c
style/: output.css
user_service/: Cargo.toml  Dockerfile
user_service/src/: app_config.rs  main.rs
