[package]
name = "server-package"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true }
app-package = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = ["serde", "ssr"] }
leptos_axum = { workspace = true }
tower = { version = "0.4" }
tower-http = { version = "0.4", features = ["fs"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
