[package]
name = "user_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
clap = { version = "4.3.19", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.29", features = ["full"] }
